# trendalgo-bot

./: .app-update.json.example  .cursor-session-state.example.json  .cursorignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .template-update.json  AGENTS.md  AGENT_MEMORY.md  BUILD_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md.example  COMPLETED_TASKS.md  CONTRIBUTING.md  DECISION_LOG.md  HUMAN_BACKLOG.md  HUMAN_BACKLOG.md.example  KNOWLEDGE_BASE.md  LICENSE  PROMPT_LIBRARY.md  README.md  RELEASE_NOTES.md.example  SECURITY.md  TEMPLATE_INDEX.json  TERMS.md  THIRD_PARTY_LICENSES.md  action.yml  donations.json.example  pyproject.toml  release-please-config.json
.cursor/: cursor-features.json  founder-gates.schema.json  hooks.json  mcp.foss.example  permissions.json  sandbox.json.example  setup-worktree-unix.sh  setup-worktree-windows.ps1  stack-selection.json
.cursor-plugin/: plugin.json
.cursor/agents/: explorer.md  gate-fixer.md  verifier.md
.cursor/commands/: audit.md  bootstrap.md  build.md  ci.md  cleanup.md  compact.md  debug.md  dependabot.md  docs.md  feature.md  fix.md  gates.md  init.md  maintain.md  plan.md  prerelease.md  prune.md  push.md  regress.md  restore.md  scope.md  setup.md  ship.md  triage.md  upgrade.md  verify.md
.cursor/hooks/: after_edit_encoding.py  before_shell_guard.py  mcp_audit.py  session_start_context.py  shell-denylist.txt  subagent_scope_inject.py
.cursor/rules/: batch-commands.mdc  ci-gates.mdc  core-directives.mdc  cursor-modes.mdc  design-system.mdc  destructive-ops.mdc  feature-modules.mdc  foss-compliance.mdc  local-compute.mdc  read-before-write.mdc  repo-hygiene.mdc  security-triage.mdc  testing.mdc  windows-encoding.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  template_improvement.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  dependency-review.yml  pages.yml  release-please.yml  release.yml  scorecard.yml  security.yml  stale.yml  weekly-health-check.yml
config/: exchange-icons.json  exchange_fees.json  exchanges.registry.json  founder.defaults.json.example  founder.defaults.schema.json  risk.limits.json.example  venues.registry.json
config/bot/: dryrun.example.json  live.example.json
design-tokens/: design-tokens.json  schema.json
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  trendalgo-api.service
docker/postgres/: README.md  schema.sql
docs/: AI_STRATEGIES.md  ARCHITECTURE.md  BATCH_COMMANDS.md  BOOTSTRAP_ALIGNMENT.md  CANONICAL_PLAN.md  CURSOR_CLI.md  CURSOR_FEATURE_RADAR.md  CURSOR_FEATURE_REGISTRY.json  CURSOR_INTEGRATIONS.md  CURSOR_MODES.md  DATA_MINIMIZATION.md  DEPLOYMENT.md  DESIGN_GUIDE.md  DEX_ROADMAP.md  EXCHANGE_ROADMAP.md  EXCHANGE_US_ROADMAP.md  FEATURE_MODULES.md  FEATURE_ROADMAP.md  FILE_SIZE_GUIDE.md  FOR_AGENTS.md  FOUNDER_GATES.md  GITHUB_ABOUT.md  HUMAN_BACKLOG.md  INITIALIZATION_PROMPT.md  LEGAL.md  LEGAL_SAFETY.md  LICENSE_MODEL.md  LOCAL_DEV.md  LTS_ABSORPTION.md  LTS_INTEGRATION.md  MAINTAINING_THE_TEMPLATE.md  MONETIZATION.md  NATIVE_TRADING.md  OPTIONAL_STACKS.md  P2_BACKEND_INTEGRATIONS.md  PARALLEL_AGENT_SCOPES.md  PORTFOLIO_TRACKER.md  POST_DELIVERY_PLAN.md  PRIVACY.md  REPO_HYGIENE.md  (+11 more)
examples/python/: README.md  pyproject.toml
examples/python/src/hello/: __init__.py  cli.py  greet.py
examples/python/tests/: test_cli.py  test_greet.py
scripts/: agent-progress.ps1  agent-progress.sh  agent-run.py  apply-founder-defaults.ps1  apply-founder-defaults.sh  archive-build-plan-sprint.py  attempt-build-plan-row.sh  backup-restore.sh  benchmark-fleet-backtest.py  benchmark-ta-cache.py  build-backlog.sh  build-sprint-status.sh  check-api-key-policy.sh  check-batch-commands.sh  check-build-plan-parallel.sh  check-bundle-size.sh  check-changelog-unreleased.sh  check-copy-compliance.sh  check-cursor-hooks.sh  check-cursor-integrations.sh  check-design-cohesion.ps1  check-design-cohesion.sh  check-file-encoding.py  check-file-encoding.sh  check-file-limits.sh  check-github-ci.ps1  check-github-ci.sh  check-hosting-eligibility.sh  check-human-backlog.ps1  check-human-backlog.sh  check-large-tracked-files.sh  check-legal-compliance.ps1  check-legal-compliance.sh  check-license-compliance.sh  check-markdown-tables.sh  check-parallel-scope.sh  check-portfolio-integrity.sh  check-production-cost.sh  check-python-pytest-workflow.sh  check-readme-health.ps1  (+107 more)
tests/: __init__.py  conftest.py  test_backtest_schema.py  test_download.py  test_lts_adapter.py  test_mixins.py  test_mixins_edge.py  test_strategy_registry.py  test_telegram.py  test_uniformity.py
(+692 files in other folders)
