[project]
name = "trendalgo-bot"
version = "0.1.0"
description = "Self-hosted crypto trading platform — native CCXT engine, portfolio, scanner, billing"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "apscheduler>=3.10.0",
    "ccxt>=4.4.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[project.scripts]
trendalgo-download = "trendalgo.data.download:main"
trendalgo-api = "trendalgo.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trendalgo"]

[tool.hatch.build.targets.sdist]
include = ["src/trendalgo", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.mypy]
strict = true
python_version = "3.11"
packages = ["trendalgo"]

[[tool.mypy.overrides]]
module = ["pandas_ta.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=trendalgo --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["trendalgo"]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 85

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
