[project]
name = "golden-path-python"
version = "0.1.0"
description = "Golden Path Python CLI stub for agent-project-bootstrap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hello = "hello.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pip-licenses>=4.5.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]

[tool.hatch.build.targets.sdist]
include = ["src/hello", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hello --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["hello"]

[tool.coverage.report]
fail_under = 90

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
